tests/interpreter/block-statement-inner-error.stderr
error: identifier 'x' is not defined
 --> $DIR/block-statement-inner-error.lox:2:5
  |
2 |     x; // undefined
  |     ^
