tests/interpreter/block-statement-inner-error.lox
{
    x; // undefined
    assert false; // shall not reach
}
